--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,19 @@
+:root {
+	--bg-color: #24242f;
+	--header-color: #2d2d39;
+	--itemBg-color: #3a3a47;
+	--reg-color: #c4c4cf;
+	--text-color: #ffffff;
+	--fog-color: #00fff0;
+	--back-color: #2e2e3c;
+}
 body,
 html {
 	font-family: 'Inter', sans-serif;
 	margin: 0;
-	background: #ffffff;
+	background-color: var(--bg-color);
 	padding: 0;
-	color: #000;
+	color: var(--text-color);
 	font-style: normal;
 }
 * {
@@ -40,7 +49,7 @@ a {
 	list-style: none;
 	text-decoration: none;
 	padding: 0;
-	color: #ffffff;
+	color: var(--text-color);
 }
 p {
 	margin: 0;
@@ -73,13 +82,59 @@ p {
 }
 .login h1 {
 	font-size: 35px;
-	color: #000;
 }
 .loginBtn {
 	padding: 10px 30px;
 	border-radius: 20px;
 	font-size: 20px;
-	color: #ffff;
-	background-color: #000;
+	color: var(--bg-color);
+	background-color: var(--reg-color);
 }
 /* Login */
+/* Loading */
+.loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	text-align: center;
+	font-size: 60px;
+}
+/* Loading */
+/* header  */
+.header {
+	display: flex;
+	align-items: center;
+	padding: 15px;
+	width: 100%;
+	background-color: var(--bg-color);
+	justify-content: space-between;
+}
+.headerLogo {
+}
+.headerLogoText {
+	font-size: 30px;
+}
+.headerLogoText span {
+	color: #8400ff;
+}
+.headerLogOut {
+	border-radius: 20px;
+	background-color: var(--itemBg-color);
+	padding: 10px 20px;
+	font-size: 15px;
+	color: #fff;
+}
+.headerFlex {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+/* header  */
+/* home */
+.home {
+	height: 100vh;
+	background-color: var(--itemBg-color);
+}
+/* home */
