--- a/src/style/style.css
+++ b/src/style/style.css
@@ -231,8 +231,6 @@ p {
 }
 /* home */
 /* Docs */
-.Docs {
-}
 .Docs .ql-editor {
 	width: 8.5in;
 	min-height: 11in;
@@ -262,14 +260,149 @@ p {
 .Docs .ql-toolbar.ql-snow .ql-formats button svg path {
 	stroke: #fff;
 }
+.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg path {
+	stroke: #0062ff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg line {
+	stroke: #0062ff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg rect {
+	stroke: #0062ff;
+}
 .Docs .ql-toolbar.ql-snow .ql-formats .ql-italic svg line {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-underline.ql-active svg rect {
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label::before {
+	color: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-color.ql-picker.ql-color-picker
+	.ql-picker-label
+	svg
+	polyline {
+	stroke: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-color.ql-picker.ql-color-picker
+	.ql-picker-label
+	svg
+	line {
+	stroke: #fff;
+}
+/*  */
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-background.ql-picker.ql-color-picker
+	.ql-picker-label
+	svg
+	polyline {
+	stroke: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-background.ql-picker.ql-color-picker
+	.ql-picker-label
+	svg
+	line {
+	stroke: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-align.ql-picker.ql-icon-picker
+	.ql-picker-label
+	svg
+	polyline {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-image svg rect {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-image svg circle {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-blockquotee svg rect {
+	stroke: #fff;
+	fill: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-blockquote svg path {
+	stroke: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-align.ql-picker.ql-icon-picker
+	.ql-picker-label
+	svg
+	line {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-code-block svg polyline {
+	stroke: #fff;
+	fill: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-code-block svg line {
+	stroke: #fff;
+}
+/*  */
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon:hover {
+	color: #0062ff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-underline svg rect {
 	fill: #fff;
 }
 .Docs .ql-toolbar.ql-snow .ql-formats .ql-list svg line {
 	stroke: #fff;
 }
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-header.ql-picker .ql-picker-label {
+	color: #fff;
+}
+.Docs
+	.ql-toolbar.ql-snow
+	.ql-formats
+	.ql-header.ql-picker
+	.ql-picker-label
+	svg
+	polygon {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-clean svg line {
+	stroke: #fff;
+}
+.Docs .ql-toolbar.ql-snow .ql-formats .ql-clean svg {
+	stroke: #fff;
+}
 /*  */
+@page {
+	margin: 1in;
+}
+@media print {
+	body {
+		background: #fff;
+	}
+	.Docs .ql-editor {
+		width: 6.5in;
+		height: 9in;
+		padding: 0;
+		margin: 0;
+		box-shadow: none;
+		align-self: flex-start;
+	}
+	.Docs .ql-toolbar.ql-snow {
+		display: none;
+	}
+	@page {
+		size: auto;
+		margin: 0mm;
+	}
+}
 /* Docs */
