--- a/src/style/style.css
+++ b/src/style/style.css
@@ -172,6 +172,7 @@ p {
 	max-width: 750px;
 	margin: 0 auto;
 	padding: 10px;
+	justify-content: center;
 }
 .docsItem {
 	max-width: 300px;
@@ -180,7 +181,20 @@ p {
 	padding: 10px 20px;
 	color: var(--text-color);
 	font-size: 15px;
-	min-width: 150px;
+	min-width: 250px;
+	display: flex;
+	justify-content: space-between;
+	/* cursor: pointer; */
+}
+.docsItem button {
+	color: var(--reg-color);
+	align-items: center;
+	z-index: 3;
+}
+.docsItem p {
+	padding: 0 10px;
+	cursor: pointer;
+	text-align: left;
 }
 .homeModalContainer {
 	position: absolute;
@@ -231,12 +245,14 @@ p {
 }
 /* home */
 /* Docs */
+.Docs {
+	min-height: 100vh;
+}
 .Docs .ql-editor {
 	width: 8.5in;
 	min-height: 11in;
-	padding: 1in;
+	padding: 50px;
 	margin: 1rem;
-	/* box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); */
 	background-color: var(--itemBg-color);
 	color: #ffffff;
 }
@@ -382,6 +398,30 @@ p {
 	stroke: #fff;
 }
 /*  */
+.backButton {
+	color: var(--bg-color);
+	background-color: var(--itemBg-white-color);
+	padding: 8px;
+	font-size: 15px;
+	border-radius: 10px;
+	position: fixed;
+	left: 10%;
+	bottom: 20px;
+	z-index: 2;
+}
+.printButton {
+	color: var(--bg-color);
+	background-color: var(--itemBg-white-color);
+	padding: 8px;
+	font-size: 15px;
+	border-radius: 10px;
+	position: fixed;
+	right: 10%;
+	bottom: 20px;
+	z-index: 2;
+}
+/*  */
+/*  */
 @page {
 	margin: 1in;
 }
@@ -391,13 +431,19 @@ p {
 	}
 	.Docs .ql-editor {
 		width: 6.5in;
-		height: 9in;
+		/* height: 9in; */
 		padding: 0;
-		margin: 0;
 		box-shadow: none;
 		align-self: flex-start;
+		color: #000;
 	}
 	.Docs .ql-toolbar.ql-snow {
+		display: none;
+	}
+	.backButton {
+		display: none;
+	}
+	.printButton {
 		display: none;
 	}
 	@page {
