--- a/src/style/style.css
+++ b/src/style/style.css
@@ -175,13 +175,13 @@ p {
 	justify-content: center;
 }
 .docsItem {
-	max-width: 300px;
+	max-width: 350px;
 	border-radius: 5px;
 	background-color: var(--itemBg-color);
 	padding: 10px 20px;
 	color: var(--text-color);
 	font-size: 15px;
-	min-width: 250px;
+	min-width: 300px;
 	display: flex;
 	justify-content: space-between;
 	position: relative;
@@ -445,6 +445,49 @@ p {
 	z-index: 2;
 }
 /*  */
+/*ErrorPage  */
+.ErrorPage {
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
+}
+.ErrorPage h1 {
+	font-size: 40px;
+}
+.ErrorPage button {
+	font-size: 20px;
+	padding: 10px 20px;
+	border-radius: 20px;
+	background-color: var(--itemBg-color);
+	color: var(--text-color);
+}
+/*ErrorPage  */
+/* ViewDocs */
+.ViewDocsContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding: 5px 10px;
+}
+.ViewDocs {
+	width: 8.5in;
+	min-height: 11in;
+	padding: 50px;
+	margin: 1rem;
+	background-color: var(--itemBg-color);
+	color: #ffffff;
+}
+@media (max-width: 870px) {
+	.ViewDocs {
+		width: clamp(18.75rem, 6.25rem + 62.5vw, 53.125rem);
+	}
+}
+/* ViewDocs */
 /*  */
 @page {
 	margin: 1in;
