--- a/src/style/style.css
+++ b/src/style/style.css
@@ -185,6 +185,7 @@ p {
 	display: flex;
 	justify-content: space-between;
 	position: relative;
+	align-items: center;
 	/* cursor: pointer; */
 }
 .docsItemBtn {
@@ -200,10 +201,10 @@ p {
 	text-align: left;
 }
 .openModalCon {
-	width: 120px;
+	width: 130px;
 	position: absolute;
-	top: 30px;
-	right: -85px;
+	top: 32px;
+	right: -95px;
 	background-color: var(--bg-color);
 	border: 2px solid var(--itemBg-color);
 	z-index: 4;
@@ -274,7 +275,8 @@ p {
 .Docs {
 	min-height: 100vh;
 }
-.Docs .ql-editor {
+/* add docs */
+.ql-editor {
 	width: 8.5in;
 	min-height: 11in;
 	padding: 50px;
@@ -282,12 +284,12 @@ p {
 	background-color: var(--itemBg-color);
 	color: #ffffff;
 }
-.Docs .ql-container.ql-snow {
+.ql-container.ql-snow {
 	border: none;
 	display: flex;
 	justify-content: center;
 }
-.Docs .ql-toolbar.ql-snow {
+.ql-toolbar.ql-snow {
 	display: flex;
 	justify-content: center;
 	position: sticky;
@@ -299,29 +301,29 @@ p {
 	color: #fff;
 }
 /*  */
-.Docs .ql-toolbar.ql-snow .ql-formats button svg path {
+.ql-toolbar.ql-snow .ql-formats button svg path {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg path {
+.ql-toolbar.ql-snow .ql-formats button.ql-active svg path {
 	stroke: #0062ff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg line {
+.ql-toolbar.ql-snow .ql-formats button.ql-active svg line {
 	stroke: #0062ff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats button.ql-active svg rect {
+.ql-toolbar.ql-snow .ql-formats button.ql-active svg rect {
 	stroke: #0062ff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-italic svg line {
+.ql-toolbar.ql-snow .ql-formats .ql-italic svg line {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon {
+.ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label::before {
+.ql-toolbar.ql-snow .ql-formats .ql-picker-label::before {
 	color: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-color.ql-picker.ql-color-picker
 	.ql-picker-label
@@ -329,8 +331,8 @@ p {
 	polyline {
 	stroke: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-color.ql-picker.ql-color-picker
 	.ql-picker-label
@@ -339,8 +341,8 @@ p {
 	stroke: #fff;
 }
 /*  */
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-background.ql-picker.ql-color-picker
 	.ql-picker-label
@@ -348,8 +350,8 @@ p {
 	polyline {
 	stroke: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-background.ql-picker.ql-color-picker
 	.ql-picker-label
@@ -357,8 +359,8 @@ p {
 	line {
 	stroke: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-align.ql-picker.ql-icon-picker
 	.ql-picker-label
@@ -366,21 +368,21 @@ p {
 	polyline {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-image svg rect {
+.ql-toolbar.ql-snow .ql-formats .ql-image svg rect {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-image svg circle {
+.ql-toolbar.ql-snow .ql-formats .ql-image svg circle {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-blockquotee svg rect {
+.ql-toolbar.ql-snow .ql-formats .ql-blockquotee svg rect {
 	stroke: #fff;
 	fill: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-blockquote svg path {
+.ql-toolbar.ql-snow .ql-formats .ql-blockquote svg path {
 	stroke: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-align.ql-picker.ql-icon-picker
 	.ql-picker-label
@@ -388,28 +390,28 @@ p {
 	line {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-code-block svg polyline {
+.ql-toolbar.ql-snow .ql-formats .ql-code-block svg polyline {
 	stroke: #fff;
 	fill: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-code-block svg line {
+.ql-toolbar.ql-snow .ql-formats .ql-code-block svg line {
 	stroke: #fff;
 }
 /*  */
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon:hover {
+.ql-toolbar.ql-snow .ql-formats .ql-picker-label svg polygon:hover {
 	color: #0062ff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-underline svg rect {
+.ql-toolbar.ql-snow .ql-formats .ql-underline svg rect {
 	fill: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-list svg line {
+.ql-toolbar.ql-snow .ql-formats .ql-list svg line {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-header.ql-picker .ql-picker-label {
+.ql-toolbar.ql-snow .ql-formats .ql-header.ql-picker .ql-picker-label {
 	color: #fff;
 }
-.Docs
-	.ql-toolbar.ql-snow
+
+.ql-toolbar.ql-snow
 	.ql-formats
 	.ql-header.ql-picker
 	.ql-picker-label
@@ -417,12 +419,13 @@ p {
 	polygon {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-clean svg line {
+.ql-toolbar.ql-snow .ql-formats .ql-clean svg line {
 	stroke: #fff;
 }
-.Docs .ql-toolbar.ql-snow .ql-formats .ql-clean svg {
+.ql-toolbar.ql-snow .ql-formats .ql-clean svg {
 	stroke: #fff;
 }
+/* add docs */
 /*  */
 .backButton {
 	color: var(--bg-color);
@@ -476,6 +479,9 @@ p {
 	flex-direction: column;
 	padding: 5px 10px;
 	word-wrap: break-word;
+}
+.ViewDocsContainer .ql-toolbar.ql-snow {
+	display: none;
 }
 .ViewDocs {
 	width: 8.5in;
